--- a/groupware-frontend/src/components/Header/styles/HeaderContainer.module.css
+++ b/groupware-frontend/src/components/Header/styles/HeaderContainer.module.css
@@ -1,7 +1,13 @@
+.headerContainer {
+	height: 100px;
+}
+
 .logo {
 	color: gray;
+	display: inline;
+	font-size: 2.3rem;
 }
 
 .mmp {
-	color: pink;
+	color: #809fff;
 }
