fixed sidemenu size

--- a/groupware-frontend/src/components/SideMenu/styles/SideMenuContainer.module.css
+++ b/groupware-frontend/src/components/SideMenu/styles/SideMenuContainer.module.css
@@ -1,23 +1,26 @@
 .sideMenuContainer {
-	flex: 0.3;
+	width: 200px;
 	margin-right: 50px;
 	text-align: center;
 }
 
 .sideMainMenu {
 	/* border: solid 1px #bfcfff; */
-	background-color: #acbae5;
-	
+	font-size: 25px;
+	margin-top: 11px;
+	margin-bottom: 11px;
 }
 
 .sideMainMenu :hover {
+	background-color: #acbae5;
 	color: white;
 }
 
 .sideSubMenu {
-	background-color: #bfcfff;
+	height: 25px;
 }
 
 .sideSubMenu :hover {
+	background-color: #acbae5;
 	color: white;
 }
