--- a/groupware-frontend/src/components/Header/styles/LogoutButton.module.css
+++ b/groupware-frontend/src/components/Header/styles/LogoutButton.module.css
@@ -1,13 +1,14 @@
 .logoutBtn{
     width: 100px;
     height: 40px;
-    display: flex;
     color: white;
     font-size: 18px;
     align-items:center;
     justify-content: center;
     background-color: #3928c0;
-    float: right;
+    position: absolute;
+	top: 40px;
+	right: 40px;
     border: 0;
     border-radius:10px;
 }
