--- a/groupware-frontend/src/components/Header/styles/HeaderContainer.module.css
+++ b/groupware-frontend/src/components/Header/styles/HeaderContainer.module.css
@@ -1,11 +1,14 @@
 .headerContainer {
 	height: 100px;
+	background-color: #00008B;
 }
 
 .logo {
-	color: gray;
+	color: white;
 	display: inline;
 	font-size: 2.3rem;
+	line-height: 100px;
+	margin-left: 70px;
 }
 
 .mmp {
