--- a/groupware-frontend/src/components/Board/styles/BoardContainer.module.css
+++ b/groupware-frontend/src/components/Board/styles/BoardContainer.module.css
@@ -1,5 +1,6 @@
 .boardContainer {
-	flex: 0.7;
-	display: flex;
-	flex-direction: column;
+	/* flex: 0.7;
+	display: flex; */
+	/* flex-direction: column; */
+	width: 70%;
 }
