--- a/groupware-frontend/src/components/Employees/styles/UserPagination.module.css
+++ b/groupware-frontend/src/components/Employees/styles/UserPagination.module.css
@@ -1,14 +1,24 @@
-/* .container {
+.container {
 	width: 70%;
-} */
+}
 
-.boardTable {
+.loadingImg {
+	width: 30px;
+	display: block;
+	margin: 50px auto;
+}
+
+.usersTable {
 	text-align: center;
 	width: 80%;
 	border-spacing: 0.2em;
 	padding: 0.2em;
-	border-radius: 7px;
 	border: 1px solid #bbb;
+	border-radius: 7px;
+}
+
+.typeRow {
+	text-align: center;
 }
 
 .pages {
