--- a/groupware-frontend/src/components/Login/styles/LoginForm.module.css
+++ b/groupware-frontend/src/components/Login/styles/LoginForm.module.css
@@ -1,22 +1,32 @@
 .form {
-	height: 100%;
+	/* height: 100%; */
 	transform: translate(0, 30%);
 }
 
-.input {
-	padding: 0.5rem 5rem 0.5rem 0.5rem;
+.idinput {
+	padding: 0.7rem 7rem 0.7rem 0.7rem;
 	border-radius: 4px;
 	display: block;
-	margin: 0.8rem auto;
+	margin: 0.3rem auto 0.5rem auto;
+	border: 1px solid #bbb;
+}
+
+.pwinput {
+	padding: 0.7rem 7rem 0.7rem 0.7rem;
+	border-radius: 4px;
+	display: block;
+	margin: 1.2rem auto 3rem auto;
 	border: 1px solid #bbb;
 }
 
 .button {
-	background-color: #6892fc;
+	/* background-color: #6892fc; */
+	background-color: #00008B;
 	color: white;
 	border-radius: 4px;
 	border: none;
-	padding: 0.5rem 1.5rem;
+	padding: 0.5rem 2rem;
 	display: block;
 	margin: 20px auto;
+	cursor: pointer;
 }
