--- a/groupware-frontend/src/styles/loginPage.css
+++ b/groupware-frontend/src/styles/loginPage.css
@@ -1,4 +1,4 @@
-.login-page {
+/* .login-page {
 	display: flex;
 	flex-direction: row;	
 	height: 100%;
@@ -15,4 +15,4 @@
 .login-container {
 	height: 100%;
 	flex: 0.5;
-}
+} */
